UI: fix search bar text alignment

--- a/src/main/resources/css/light.css
+++ b/src/main/resources/css/light.css
@@ -192,7 +192,7 @@
     -fx-border-color: -grey-400;
     -fx-border-radius: 24 0 0 24;
     -fx-border-width: 1 0 1 1;
-    -fx-padding: 0 8 0 16;
+    -fx-padding: 0 8 0 24;
     -fx-min-height:48;
 }
 
